# fast-base62

./: .gitignore  Cargo.toml  LICENSE
benches/: encode.rs
reports/: index.html
reports/decode/: index.html
reports/decode/11/: index.html
reports/decode/173/: index.html
reports/decode/22/: index.html
reports/decode/345/: index.html
reports/decode/44/: index.html
reports/decode/base_62/: index.html
reports/decode/base_62/11/: index.html
reports/decode/base_62/1376/: index.html
reports/decode/base_62/173/: index.html
reports/decode/base_62/22/: index.html
reports/decode/base_62/345/: index.html
reports/decode/base_62/44/: index.html
reports/decode/base_62/87/: index.html
reports/decode/fast_base62/: index.html
reports/decode/fast_base62/11/: index.html
reports/decode/fast_base62/1380/: index.html
reports/decode/fast_base62/173/: index.html
reports/decode/fast_base62/22/: index.html
reports/decode/fast_base62/345/: index.html
reports/decode/fast_base62/44/: index.html
reports/decode/fast_base62/86/: index.html
reports/encode/: index.html
reports/encode/1024/: index.html
reports/encode/128/: index.html
reports/encode/16/: index.html
reports/encode/256/: index.html
reports/encode/32/: index.html
reports/encode/64/: index.html
reports/encode/8/: index.html
reports/encode/base_62/: index.html
reports/encode/base_62/1024/: index.html
reports/encode/base_62/128/: index.html
reports/encode/base_62/16/: index.html
reports/encode/fast_base62/: index.html
src/: lib.rs  tests.rs
(+11 files in other folders)
