[package]
name = "fast-base62"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
base-62 = "0.1.1"
criterion = "0.4"
fuzzcheck = "0.12"
proptest = "1"
rand = "0.8"

[[bench]]
name = "encode"
harness = false